--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,6 +1,6 @@
 name: CI Tests
 permissions:
-  contents: read
+  contents: write
 
 on:
   push:
@@ -28,9 +28,6 @@ jobs:
 
     - name: Install dependencies
       run: npm ci
-
-    - name: Run tests
-      run: npm test
 
     - name: Build extension
       run: npm run build
