--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,6 +1,6 @@
 name: CI Tests
 permissions:
-  contents: write
+  contents: read
 
 on:
   push:
@@ -29,5 +29,11 @@ jobs:
     - name: Install dependencies
       run: npm ci
 
+    - name: Run tests
+      run: npm test
+
+    - name: Build project
+      run: npm run build chrome
+      
     - name: Build extension
       run: npm run build
