--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -94,10 +94,11 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
-      - name: Build release zip artifacts
-        run: |
-          npm run zip
-          npm run zip:firefox
+      - name: Download build artifacts
+        uses: actions/download-artifact@v4
+        with:
+          name: extension-zips
+          path: .output
 
       - name: Publish release and upload assets
         uses: softprops/action-gh-release@v2
