--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,6 +6,8 @@ permissions:
 on:
   push:
     branches: [master]
+    tags:
+      - "v*"
   pull_request:
     branches: [master]
 
@@ -21,7 +23,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        node-version: [22.x]
+        node-version: ["22.x"]
 
     steps:
       - name: Checkout repository
@@ -35,27 +37,6 @@ jobs:
 
       - name: Install dependencies
         run: npm ci --legacy-peer-deps
-
-      - name: Run tests
-        run: npm test
-
-  build:
-    name: Build extension
-    runs-on: ubuntu-latest
-    timeout-minutes: 15
-
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
-
-      - name: Set up Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: ${{ matrix.node-version }}
-          cache: npm
-
-      - name: Install dependencies
-        run: npm ci
 
       - name: Run tests
         run: npm test
@@ -77,11 +58,10 @@ jobs:
           cache: npm
 
       - name: Install dependencies
-        run: npm ci
+        run: npm ci --legacy-peer-deps
 
       - name: Build zip artifacts
-        run: |
-          npm run zip
+        run: npm run zip
 
       - name: Upload workflow artifacts
         uses: actions/upload-artifact@v4
@@ -95,23 +75,11 @@ jobs:
     if: startsWith(github.ref, 'refs/tags/v')
     runs-on: ubuntu-latest
     timeout-minutes: 15
-    needs: [test, build]
+    needs: build
     permissions:
       contents: write
 
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
-
-      - name: Set up Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: 22.x
-          cache: npm
-
-      - name: Install dependencies
-        run: npm ci
-
       - name: Download build artifacts
         uses: actions/download-artifact@v4
         with:
@@ -123,11 +91,3 @@ jobs:
         with:
           generate_release_notes: true
           files: .output/*.zip
-          node-version: 22.x
-          cache: npm
-
-      - name: Install dependencies
-        run: npm ci --legacy-peer-deps
-
-      - name: Build Chromium extension
-        run: npm run build
