--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,11 +5,13 @@ permissions:
 
 on:
   push:
-    branches: [master]
+    branches:
+      - master
     tags:
       - "v*"
   pull_request:
-    branches: [master]
+    branches:
+      - master
 
 concurrency:
   group: ci-${{ github.workflow }}-${{ github.ref }}
@@ -23,7 +25,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        node-version: ["22.x"]
+        node-version: [22.x]
 
     steps:
       - name: Checkout repository
@@ -63,11 +65,16 @@ jobs:
       - name: Build zip artifacts
         run: npm run zip
 
+      - name: Prepare workflow artifacts
+        run: |
+          mkdir -p artifacts
+          cp .output/*.zip artifacts/
+
       - name: Upload workflow artifacts
         uses: actions/upload-artifact@v4
         with:
           name: extension-zips
-          path: .output/*.zip
+          path: artifacts/*.zip
           if-no-files-found: error
 
   release:
@@ -84,10 +91,10 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           name: extension-zips
-          path: .output
+          path: artifacts
 
       - name: Publish release and upload assets
         uses: softprops/action-gh-release@v2
         with:
           generate_release_notes: true
-          files: .output/*.zip
+          files: artifacts/*.zip
